[metadata]
name = sentry-tools
version = 0.0.2
author = Manuel Stingl
author_email = opensource@voltane.eu
description = Tools for sentry
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Topic :: Utilities
    # Development Status :: 5 - Production/Stable
url = https://github.com/Voltane-EU/sentry-tools

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
# install_requires =
